--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,14 +1,11 @@
 .popup__form {
   display: flex;
   flex-direction: column;
-  max-width: 430px;
-  background-color: #fff;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
+  padding: 36px;
 }
 
 @media screen and (max-width: 640px) {
   .popup__form {
-    max-width: 282px;
+    padding: 22px;
   }
 }
