--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,10 +3,6 @@
   border: 0;
   height: 27px;
   border-bottom: 1px solid #000;
-  opacity: 0.2;
-  width: 358px;
-  margin-right: auto;
-  margin-left: auto;
   padding: 0;
 }
 
