--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,12 @@
 .popup__title {
-  margin: 0 0 0 36px;
+  margin: 0;
   font-size: 24px;
   font-weight: 900;
   line-height: 1.2;
-  padding-top: 34px;
 }
 
 @media screen and (max-width: 640px) {
   .popup__title {
     font-size: 18px;
-    padding-top: 25px;
-    margin: 0 0 0 22px;
   }
 }
