--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,3 +4,15 @@
 @import url("./__input/_val/popup__input_val_name.css");
 @import url("./__input/_val/popup__input_val_job.css");
 @import url("./__input/popup__input.css");
+
+.popup {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
